--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,8 @@
   <meta name="theme-color" content="#1976d2">
 </head>
 
-<body>
+<!-- Dark theme forced by adding class to body -->
+<body class="dark-theme">
   <app-root></app-root>
 </body>
 
