--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,7 @@
   <meta name="theme-color" content="#1976d2">
 </head>
 
-<!-- Dark theme forced by adding class to body -->
-<body class="dark-theme">
+<body>
   <app-root></app-root>
 </body>
 
